objects/Drink_Order__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Drink Orders</relationshipLabel>
        <relationshipName>Drink_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flavor</label>
        <referenceTo>Flavor__c</referenceTo>
        <relationshipLabel>Drink Orders</relationshipLabel>
        <relationshipName>Drink_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Queue__c</fullName>
        <label>Fulfillment Queue</label>
        <referenceTo>Fulfillment_Queue__c</referenceTo>
        <relationshipLabel>Drink Orders</relationshipLabel>
        <relationshipName>Drink_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <formula>Flavor__r.Price__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                    <default>true</default>
                    <label>Placed</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Drink Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORDER-{0000}</displayFormat>
        <label>Drink Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>